<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/screen_title"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/first_screen_title"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_numberfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/number_field_label"
            android:textColor="@color/textView"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/number_field_hint"
            android:inputType="text"
            android:minHeight="48dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_button"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_margin="3dp"
        android:background="#c0c0c0"
        android:text="@string/clear_butt"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView16"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/system_type_label"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/binary_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:checked="true"
                android:text="@string/binary_label"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/decimal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/decimal"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/octal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/octal_label"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/hexadecimal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/hexadecimal_label"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/binary_label"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/binary_label" />

    <TextView
        android:id="@+id/octal_label"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/octal_label" />

    <TextView
        android:id="@+id/decimal_label"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/decimal" />

    <TextView
        android:id="@+id/hexadecimal_label"
        style="@style/TextView_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hexadecimal_label" />

</LinearLayout>